[package]
name = "tech-ui"
version = "0.1.0"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"
description = "Tech UI creator"

repository = "https://github.com/merl-twin/tech-ui"
homepage = "https://github.com/merl-twin/tech-ui"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
log = "0.4"

